@startuml

title __PROJEKTJPWP3's Class Diagram__\n


    class Game {
    }

  


    class Grid {
    }

  


    class GridPanel {
    }

  


    class Menu {
    }

  

  Game o-- GridPanel : gp
  GridPanel -up-|> javax.swing.JPanel
  GridPanel o-- Grid : grd
  Menu -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
